Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-20661

1st stage GUI setup: fix page transition for Repair/Upgrade installation type

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.16
    • Setup
    • None

    Description

      The GUI setup doesn't skip device configuration and partition selection pages during repair/upgrade, which doesn't make sense for a repair or upgrade installation type, and also it's inconsistent with text-mode setup (USETUP).

      Attachments

        Issue Links

          Activity

            People

              hbelusca hbelusca
              xmine64 xmine64
              Votes:
              1 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: